// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`breaking updates > end event 1`] = `
Array [
  "end",
  Object {
    "config": Object {
      "cwd": "/updtr/test/cwd",
      "exclude": Array [],
      "registry": undefined,
      "save": "smart",
      "test": undefined,
      "updateTo": "latest",
      "use": "npm",
    },
    "results": Array [
      Object {
        "name": "updtr-test-module-1",
        "rollbackTo": "1.0.0",
        "success": true,
        "updateTo": "2.0.0",
      },
      Object {
        "name": "updtr-test-module-2",
        "rollbackTo": "1.0.0",
        "success": false,
        "updateTo": "2.0.0",
      },
    ],
  },
]
`;

exports[`no-outdated > end event 1`] = `
Array [
  "end",
  Object {
    "config": Object {
      "cwd": "/updtr/test/cwd",
      "exclude": Array [],
      "registry": undefined,
      "save": "smart",
      "test": undefined,
      "updateTo": "latest",
      "use": "npm",
    },
    "results": Array [],
  },
]
`;

exports[`one-breaking > end event 1`] = `
Array [
  "end",
  Object {
    "config": Object {
      "cwd": "/updtr/test/cwd",
      "exclude": Array [],
      "registry": undefined,
      "save": "smart",
      "test": undefined,
      "updateTo": "latest",
      "use": "npm",
    },
    "results": Array [
      Object {
        "name": "updtr-test-module-1",
        "rollbackTo": "2.0.0",
        "success": true,
        "updateTo": "2.1.1",
      },
    ],
  },
]
`;

exports[`start event 1`] = `
Array [
  "start",
  Object {
    "config": Object {
      "cwd": "/updtr/test/cwd",
      "exclude": Array [],
      "registry": undefined,
      "save": "smart",
      "test": undefined,
      "updateTo": "latest",
      "use": "npm",
    },
  },
]
`;

exports[`two non-breaking and update not ok > end event 1`] = `
Array [
  "end",
  Object {
    "config": Object {
      "cwd": "/updtr/test/cwd",
      "exclude": Array [],
      "registry": undefined,
      "save": "smart",
      "test": undefined,
      "updateTo": "latest",
      "use": "npm",
    },
    "results": Array [
      Object {
        "name": "updtr-test-module-1",
        "rollbackTo": "2.0.0",
        "success": false,
        "updateTo": "2.1.1",
      },
      Object {
        "name": "updtr-test-module-2",
        "rollbackTo": "2.0.0",
        "success": true,
        "updateTo": "2.1.1",
      },
    ],
  },
]
`;

exports[`two non-breaking and update ok > end event 1`] = `
Array [
  "end",
  Object {
    "config": Object {
      "cwd": "/updtr/test/cwd",
      "exclude": Array [],
      "registry": undefined,
      "save": "smart",
      "test": undefined,
      "updateTo": "latest",
      "use": "npm",
    },
    "results": Array [
      Object {
        "name": "updtr-test-module-1",
        "rollbackTo": "2.0.0",
        "success": true,
        "updateTo": "2.1.1",
      },
      Object {
        "name": "updtr-test-module-2",
        "rollbackTo": "2.0.0",
        "success": true,
        "updateTo": "2.1.1",
      },
    ],
  },
]
`;

exports[`updateTo non-breaking > end event 1`] = `
Array [
  Object {
    "name": "updtr-test-module-1",
    "rollbackTo": "1.0.0",
    "success": true,
    "updateTo": "2.0.0",
  },
]
`;
